Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@ h1:hover {
             </script>
             <footer>
                 <div class="footer-bottom">
-                    <p>&copy; 2024 Developed by Elvis-Developer</p>
+                    <p>&copy; 2024 Sua Empresa - Todos os direitos reservados</p>
                 </div>
             </footer>
 
