--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@ h1:hover {
                 <input type="hidden" name="accessKey" value="11d0b5ed-df07-4c34-ad75-45ea3e034c56">
                 <input type="hidden" name="subject" value="Contact Form Submission">
                 <input type="hidden" name="replyTo" value="">
-                <input type="hidden" name="redirectTo" value="https://example.com/contact/success">
+                <input type="hidden" name="redirectTo" value="produtos-app.vercel.app">
                 <input type="submit" value="Submit">
             </form>
             <br>
