--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
         }
 
         nav {
-            background: linear-gradient;;
+            background: linear-gradient;
+            ;
             padding: 10px;
             text-align: center;
             position: relative;
@@ -530,14 +531,10 @@
             /* Altera a cor de fundo ao passar o mouse */
         }
 
-
-
-
         .content {
             text-align: center;
             /* Centraliza o conteúdo dentro da div */
         }
-
 
         .content {
             text-align: center;
@@ -557,9 +554,6 @@
             /* Adiciona espaçamento ao redor dos links */
             background: linear-gradient(45deg, #e67e22, #d35400);
 
-
-
-
             /* Gradiente de cores vibrantes */
             color: white;
             /* Define a cor do texto */
@@ -578,71 +572,59 @@
         }
 
         .content a:hover {
-            background: linear-gradient(45deg, #3498db, #2980b9);;
+            background: linear-gradient(45deg, #3498db, #2980b9);
+            ;
             /* Altera a cor do gradiente ao passar o mouse */
             transform: scale(1.05);
             /* Aumenta ligeiramente o tamanho ao passar o mouse */
         }
 
-
-
-
-
-
         h1 {
-    display: inline-block;
-    padding: 20px 30px;
-    margin: 10px 20px;
-    background: linear-gradient(45deg, #38064c, #027272);
-    color: white;
-    text-align: center;
-    text-transform: uppercase; /* Texto em caixa alta */
-    text-decoration: none;
-    border-radius: 10px;
-    font-size: 42px; /* Aumentei um pouco o tamanho da fonte */
-    font-family: 'Pacifico', cursive;
-    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
-    transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
-}
+            display: inline-block;
+            padding: 20px 30px;
+            margin: 10px 20px;
+            background: linear-gradient(45deg, #38064c, #027272);
+            color: white;
+            text-align: center;
+            text-transform: uppercase;
+            /* Texto em caixa alta */
+            text-decoration: none;
+            border-radius: 10px;
+            font-size: 42px;
+            /* Aumentei um pouco o tamanho da fonte */
+            font-family: 'Pacifico', cursive;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+            transition: background 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
+        }
 
-h1:hover {
-    background: linear-gradient(45deg, #8e44ad, #9b59b6);
-    transform: scale(1.05);
-    box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4); /* Aumentei um pouco a intensidade da sombra */
-}
+        h1:hover {
+            background: linear-gradient(45deg, #8e44ad, #9b59b6);
+            transform: scale(1.05);
+            box-shadow: 0 12px 24px rgba(0, 0, 0, 0.4);
+            /* Aumentei um pouco a intensidade da sombra */
+        }
 
+        .cta-button {
+            display: inline-block;
+            width: 200px;
+            padding: 15px 25px;
+            margin: 10px 20px;
+            background: linear-gradient(45deg, #2ecc71, #27ae60);
+            /* Cor verde-esmeralda como exemplo */
+            color: white;
+            text-align: center;
+            text-decoration: none;
+            border-radius: 10px;
+            font-size: 18px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            transition: background 0.3s ease, transform 0.3s ease;
+        }
 
-
-
-
-
-
-
-
-
-
-
-
-.cta-button {
-    display: inline-block;
-    width: 200px;
-    padding: 15px 25px;
-    margin: 10px 20px;
-    background: linear-gradient(45deg, #2ecc71, #27ae60); /* Cor verde-esmeralda como exemplo */
-    color: white;
-    text-align: center;
-    text-decoration: none;
-    border-radius: 10px;
-    font-size: 18px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    transition: background 0.3s ease, transform 0.3s ease;
-}
-
-.cta-button:hover {
-    background: linear-gradient(45deg, #27ae60, #2ecc71); /* Alteração ao passar o mouse */
-    transform: scale(1.05);
-}
-
+        .cta-button:hover {
+            background: linear-gradient(45deg, #27ae60, #2ecc71);
+            /* Alteração ao passar o mouse */
+            transform: scale(1.05);
+        }
     </style>
 </head>
 
@@ -666,24 +648,24 @@ h1:hover {
         </div>
 
         <div class="menu-items" id="menuItems">
-             <a href="about.html"><i class="fas fa-home"></i> About Us</a>
-             <a href="#products"><i class="fas fa-box"></i> Products</a>
-             <a href="#special-offers"><i class="fas fa-tags"></i> Special Offers</a>
-             <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
-             <a href="#testimonials"><i class="fas fa-comment-alt"></i> Testimonials</a>
-             <a href="#Location"><i class="fas fa-map-marker-alt"></i> Location</a>
-             <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
-             <a href="#owner"><i class="fas fa-user-tie"></i> Store Owner</a>
-             <a href="#jobs"><i class="fas fa-briefcase"></i> Job Vacancies</a>
-             <a href="#news"><i class="fas fa-newspaper"></i> News</a>
-             <a href="#services"><i class="fas fa-concierge-bell"></i> Services</a>
-             <a href="#careers"><i class="fas fa-user-tie"></i> Careers</a>
-             <a href="#lessons"><i class="fas fa-chalkboard-teacher"></i> Lessons</a>
-             <a href="#repair"><i class="fas fa-tools"></i> Repairs</a>
-             <a href="#events-calendar"><i class="fas fa-calendar-check"></i> Events Calendar</a>
-             <a href="#rentals"><i class="fas fa-handshake"></i> Instrument Rental</a>
-             <a href="#politics"><i class="fas fa-file-alt"></i> Store Policy</a>
-             <a href="#partnerships"><i class="fas fa-handshake"></i> Partnerships</a>
+            <a href="about.html"><i class="fas fa-home"></i> About Us</a>
+            <a href="#products"><i class="fas fa-box"></i> Products</a>
+            <a href="#special-offers"><i class="fas fa-tags"></i> Special Offers</a>
+            <a href="#faq"><i class="fas fa-question-circle"></i> FAQ</a>
+            <a href="#testimonials"><i class="fas fa-comment-alt"></i> Testimonials</a>
+            <a href="#Location"><i class="fas fa-map-marker-alt"></i> Location</a>
+            <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+            <a href="#owner"><i class="fas fa-user-tie"></i> Store Owner</a>
+            <a href="#jobs"><i class="fas fa-briefcase"></i> Job Vacancies</a>
+            <a href="#news"><i class="fas fa-newspaper"></i> News</a>
+            <a href="#services"><i class="fas fa-concierge-bell"></i> Services</a>
+            <a href="#careers"><i class="fas fa-user-tie"></i> Careers</a>
+            <a href="#lessons"><i class="fas fa-chalkboard-teacher"></i> Lessons</a>
+            <a href="#repair"><i class="fas fa-tools"></i> Repairs</a>
+            <a href="#events-calendar"><i class="fas fa-calendar-check"></i> Events Calendar</a>
+            <a href="#rentals"><i class="fas fa-handshake"></i> Instrument Rental</a>
+            <a href="#politics"><i class="fas fa-file-alt"></i> Store Policy</a>
+            <a href="#partnerships"><i class="fas fa-handshake"></i> Partnerships</a>
         </div>
     </nav>
     </nav>
@@ -757,16 +739,28 @@ h1:hover {
             <br>
 
             <form action="https://api.staticforms.xyz/submit" method="post">
-                <input type="text" name="name" placeholder="Your Name">
-                <input type="email" name="email" placeholder="Your Email" required>
-                <input type="text" name="phone" placeholder="Your Phone">
-                <input type="text" name="company" placeholder="Your Company">
-                <textarea name="message" placeholder="Your Message" required></textarea>
+                <label for="name">Your Name:</label>
+                <input type="text" id="name" name="name" placeholder="Your Name" required>
+
+                <label for="email">Your Email:</label>
+                <input type="email" id="email" name="email" placeholder="Your Email" required>
+
+                <label for="phone">Your Phone:</label>
+                <input type="text" id="phone" name="phone" placeholder="Your Phone">
+
+                <label for="company">Your Company:</label>
+                <input type="text" id="company" name="company" placeholder="Your Company">
+
+                <label for="message">Your Message:</label>
+                <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+
                 <input type="text" name="honeypot" style="display:none">
+
                 <input type="hidden" name="accessKey" value="11d0b5ed-df07-4c34-ad75-45ea3e034c56">
                 <input type="hidden" name="subject" value="Contact Form Submission">
-                <input type="hidden" name="replyTo" value="">
-                <input type="hidden" name="redirectTo" value="produtos-app.vercel.app">
+                <input type="hidden" name="replyTo" value="@">
+                <input type="hidden" name="redirectTo" value="https://produtos-app.vercel.app">
+
                 <input type="submit" value="Submit">
             </form>
             <br>
@@ -853,14 +847,17 @@ h1:hover {
 
             <section id="owner">
                 <p>Store Owner:</p>
+
                 <p>João Silva, founder and owner of Harmonia Musical, is an experienced and enthusiastic musician with
                     more than 20 years of career in the world of music. João brought his passion and knowledge to create
                     a store that serves both beginners and professional musicians. His vision is to provide a space
-                    where everyone can find instruments and accessories needed to express their musical creativity. João
-                    believes that music transforms lives and is always available to offer advice and share his
-                    experiences with customers.</p>
+                    where everyone can find instruments and accessories needed to express their musical creativity.
+                    <br>
+                    João believes that music transforms lives and is always available to offer advice and share his
+                    experiences with customers.
+                </p>
+                <br>
             </section>
-            <br>
             <br>
 
             <section id="jobs">
@@ -868,31 +865,36 @@ h1:hover {
                 <p>We are always looking for talented people who are passionate about music to join our team at Harmonia
                     Musical. We offer a dynamic and welcoming work environment where you can grow professionally and
                     share your love of music. Check out our available job openings:</p>
+                <br>
 
                 <ul>
                     <li><strong>Sales Consultant:</strong> Looking for someone with customer service skills and
                         knowledge of musical instruments. Responsible for helping customers find the right products and
                         offer technical support.</li>
+                    <br>
 
                     <li><strong>Maintenance Technician:</strong> Professional with experience in repairs and maintenance
                         of musical instruments. Ability to diagnose and resolve technical problems efficiently.</li>
+                    <br>
 
                     <li><strong>Music Teacher:</strong> Experienced musician to teach various instruments. Must have
                         patience, communication skills and passion for teaching.</li>
                 </ul>
+                <br>
 
-                <p>If you are interested in applying for one of the vacancies, please contact us by sending a CV in PDF. Join us and be part of a team dedicated to spreading the word
+                <p>If you are interested in applying for one of the vacancies, please contact us by sending a CV in PDF.
+                    Join us and be part of a team dedicated to spreading the word
                     joy of music.</p>
+                <br>
             </section>
-            <br>
             <br>
             <!-- News Section -->
             <section id="news">
                 <p>News</p>
                 <p>Stay up to date with the latest musical instrument news, product launches, industry trends and local
                     events.</p>
+                <br>
             </section>
-            <br>
             <br>
 
             <!-- Services Section -->
@@ -902,15 +904,14 @@ h1:hover {
                     to choose the ideal instrument.</p>
             </section>
             <br>
-            <br>
 
             <!-- Careers Section -->
             <section id="careers">
                 <p>Careers</p>
                 <p>Come and be part of our team! Check out available positions and information on how to apply to work
                     with us.</p>
+                <br>
             </section>
-            <br>
             <br>
 
             <!-- Classes Section -->
@@ -920,14 +921,12 @@ h1:hover {
                     styles.</p>
             </section>
             <br>
-            <br>
 
             <!-- Repair Section -->
             <section id="repair">
                 <p>Repairs</p>
                 <p>We offer professional repair services to keep your instruments in perfect working condition.</p>
             </section>
-            <br>
             <br>
 
             <!-- Event Calendar -->
@@ -937,7 +936,6 @@ h1:hover {
                     activities.</p>
             </section>
             <br>
-            <br>
 
             <!-- Instrument Rental Section -->
             <section id="rentals">
@@ -945,7 +943,6 @@ h1:hover {
                 <p>Explore our musical instrument rental options for events, recording or experimentation before
                     purchasing.</p>
             </section>
-            <br>
             <br>
 
             <!-- Store Policy -->
@@ -955,7 +952,6 @@ h1:hover {
                     satisfactory purchasing experience.</p>
             </section>
             <br>
-            <br>
 
             <!-- Partnerships Section -->
             <section id="partnerships">
@@ -963,7 +959,6 @@ h1:hover {
                 <p>We are open to partnerships with music schools, local artists and companies in the sector. Learn more
                     about collaboration opportunities.</p>
             </section>
-            <br>
             <br>
 
             <section id="special-offers" class="info">
@@ -1032,6 +1027,8 @@ h1:hover {
                         options.</p>
                 </div>
             </section>
+            <br>
+            <br>
 
             <section id="contact" class="info">
                 <p>Contact Us:</p>
@@ -1039,6 +1036,8 @@ h1:hover {
                     <p>WhatsApp: <a href="tel:(13) 98143-0940">(13) 98143-0940</a></p>
                 </div>
             </section>
+            <br>
+            <br>
 
             <footer>
 
@@ -1051,20 +1050,24 @@ h1:hover {
 
                     <p>Follow Us</p>
                     <div class="social-icons">
+
                         <a href="https://www.facebook.com/hotdog"><i class="fab fa-facebook-f"></i></a>
+
+                        <a href="https://m.me/hotdog"><i class="fab fa-facebook-messenger"></i></a>
+
                         <a href="https://twitter.com/hotdog"><i class="fab fa-twitter"></i></a>
 
                         <a href="https://www.instagram.com/hotdog"><i class="fab fa-instagram"></i></a>
 
                         <a href="https://www.linkedin.com/in/hotdog"><i class="fab fa-linkedin"></i></a>
 
-                        <a href="https://t.me/hotdog"><i class="fab fa-telegram"></i></a>
-                        <a href="https://www.youtube.com/hotdog"><i class="fab fa-youtube"></i></a>
-
                         <a href="https://wa.me/1234567890"><i class="fab fa-whatsapp"></i></a>
-                        <a href="https://m.me/hotdog"><i class="fab fa-facebook-messenger"></i></a>
+
+                        <a href="https://t.me/hotdog"><i class="fab fa-telegram"></i></a>
 
                         <a href="https://open.spotify.com/user/hotdog"><i class="fab fa-spotify"></i></a>
+
+                        <a href="https://www.youtube.com/hotdog"><i class="fab fa-youtube"></i></a>
                     </div>
                     <br>
 
@@ -1076,47 +1079,23 @@ h1:hover {
             </footer>
 
             <script>
+                // Adiciona o evento de clique para alternar a classe 'active' no menu e a classe 'open' no botão de alternância do menu
                 menuToggle.addEventListener('click', function () {
                     navMenu.classList.toggle('active');
                     menuToggle.classList.toggle('open');
                 });
 
+                // Adiciona o evento de mouseover para rotacionar o botão de alternância do menu em 90 graus
                 menuToggle.addEventListener('mouseover', function () {
                     menuToggle.style.transform = 'rotate(90deg)';
                 });
 
+                // Adiciona o evento de mouseout para redefinir a rotação do botão de alternância do menu
                 menuToggle.addEventListener('mouseout', function () {
                     menuToggle.style.transform = 'rotate(0deg)';
                 });
             </script>
 
-
-            <!-- Seu script JavaScript -->
-            <script>
-                document.getElementById('registerForm').addEventListener('submit', async (e) => {
-                    e.preventDefault();
-
-                    const formData = new FormData(e.target);
-                    const data = new URLSearchParams(formData);
-
-                    try {
-                        const response = await fetch('http://localhost:3000/register', {
-                            method: 'POST',
-                            body: data
-                        });
-
-                        if (!response.ok) {
-                            throw new Error('Erro ao registrar.');
-                        }
-
-                        const result = await response.text();
-                        alert(result); // Exibe mensagem do servidor
-                    } catch (error) {
-                        console.error('Erro:', error.message);
-                        alert('Erro ao registrar.');
-                    }
-                });
-            </script>
             <footer>
                 <div class="footer-bottom">
                     <p>&copy; 2024 Sua Empresa. Todos os direitos reservados</p>
