--- a/index.html
+++ b/index.html
@@ -682,6 +682,8 @@
                 <p>Product</p>
                 <img src="assets/guitarra2.avif" alt="Lanche2">
                 <p>Price: R$ 800.00</p>
+                <p>Discount: 30%</p>
+                <p>Discounted price: R$ 30.00</p>
                 <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido."
                     class="cta-button">Buy now</a>
             </div>
@@ -692,6 +694,8 @@
                 <p>Product</p>
                 <img src="assets/guitar.jpg" alt="Bebida3">
                 <p>Price: R$ 800.00</p>
+                <p>Discount: 30%</p>
+                <p>Discounted price: R$ 30.00</p>
                 <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido."
                     class="cta-button">Buy now</a>
             </div>
@@ -702,6 +706,8 @@
                 <p>Product</p>
                 <img src="assets/contrabaixo.jpg" alt="Bebida4">
                 <p>Price: R$ 900.00</p>
+                <p>Discount: 50%</p>
+                <p>Discounted price: R$ 50.00</p>
                 <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido."
                     class="cta-button">Buy now</a>
             </div>
@@ -712,6 +718,8 @@
                 <p>Product</p>
                 <img src="assets/violao.jpg" alt="Lanche3">
                 <p>Price: R$ 800.00</p>
+                <p>Discount: 30%</p>
+                <p>Discounted price: R$ 30.00</p>
                 <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido."
                     class="cta-button">Buy now</a>
             </div>
@@ -722,6 +730,8 @@
                 <p>Product</p>
                 <img src="assets/drums.jpg" alt="Lanche2">
                 <p>Price: R$ 1000.00</p>
+                <p>Discount: 50%</p>
+                <p>Discounted price: R$ 50.00</p>
                 <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido."
                     class="cta-button">Buy now</a>
             </div>
@@ -732,6 +742,8 @@
                 <p>Product</p>
                 <img src="assets/saxofone.jpg" alt="Bebida4">
                 <p>Price: R$ 2000.00</p>
+                <p>Discount: 40%</p>
+                <p>Discounted price: R$ 40.00</p>
                 <a href="https://api.whatsapp.com/send?phone=13981430940&text=Olá! Gostaria de fazer um pedido."
                     class="cta-button">Buy now</a>
             </div>
