--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
             flex-direction: column;
             gap: 10px;
             padding: 20px;
-            border: 1px solid red;
+            border: 1px solid white;
             border-radius: 5px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
         }
