--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
 
     <footer>
         <div class="footer-bottom">
-            <p>&copy; 2024 Developed by Elvis-Developer</p>
+            <p>&copy; 2024 Sua Empresa. Todos os direitos reservados</p>
         </div>
     </footer>
 
