--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-     <meta name="description" content="Seu site de produtos com video de fundo, seções, formulário de contato, localização e muito mais">
+     <meta name="description" content="">
     <title>Music Store</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
