Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -752,6 +752,7 @@
             <div class="product">
                 <p>Product</p>
                 <img src="assets/guitarra2.avif" alt="Lanche2">
+<p>Model:<p>
                 <p>Price: R$ 800.00</p>
                 <p>Discount: 30% (R$ 30.00)</p>
                 <p>Discounted price: R$ 770.00</p> <!-- Preço corrigido -->
@@ -764,6 +765,7 @@
             <div class="product">
                 <p>Product</p>
                 <img src="assets/guitar.jpg" alt="Bebida3">
+<p>Model:<p>
                 <p>Price: R$ 800.00</p>
                 <p>Discount: 30% (R$ 30.00)</p>
                 <p>Discounted price: R$ 770.00</p> <!-- Preço corrigido -->
@@ -776,6 +778,7 @@
             <div class="product">
                 <p>Product</p>
                 <img src="assets/contrabaixo.jpg" alt="Bebida4">
+<p>Model:<p>
                 <p>Price: R$ 900.00</p>
                 <p>Discount: 50% (R$ 50.00)</p>
                 <p>Discounted price: R$ 850.00</p> <!-- Preço corrigido -->
@@ -788,6 +791,7 @@
             <div class="product">
                 <p>Product</p>
                 <img src="assets/violao.jpg" alt="Lanche3">
+<p>Model:<p>
                 <p>Price: R$ 800.00</p>
                 <p>Discount: 30% (R$ 30.00)</p>
                 <p>Discounted price: R$ 770.00</p> <!-- Preço corrigido -->
@@ -800,6 +804,7 @@
             <div class="product">
                 <p>Product</p>
                 <img src="assets/drums.jpg" alt="Lanche2">
+<p>Model:<p>
                 <p>Price: R$ 1000.00</p>
                 <p>Discount: 50% (R$ 50.00)</p>
                 <p>Discounted price: R$ 950.00</p> <!-- Preço corrigido -->
@@ -812,6 +817,7 @@
             <div class="product">
                 <p>Product</p>
                 <img src="assets/saxofone.jpg" alt="Bebida4">
+<p>Model:<p>
                 <p>Price: R$ 2000.00</p>
                 <p>Discount: 40% (R$ 40.00)</p>
                 <p>Discounted price: R$ 1960.00</p> <!-- Preço corrigido -->
