--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my project, music store</title>
+    <title>Bem-vindo ao meu projeto, loja de música</title>
+    <!-- Meta Tags para SEO -->
+    <meta name="description" content="Loja de Música: Instrumentos, acessórios e tudo para músicos. Explore nossa loja para produtos exclusivos e de alta qualidade!">
+    <meta name="keywords" content="música, loja de música, instrumentos musicais, acessórios musicais, loja online de música, produtos musicais">
+    <meta name="author" content="Sua Empresa ou Seu Nome">
+    <!-- Open Graph Meta Tags (para redes sociais) -->
+    <meta property="og:title" content="Loja de Música">
+    <meta property="og:description" content="Loja de Música: Instrumentos, acessórios e tudo para músicos. Explore nossa loja para produtos exclusivos e de alta qualidade!">
+    <meta property="og:image" content="URL-da-imagem-de-capa-ou-produto.jpg">
+    <meta property="og:url" content="https://www.sualoja.com">
+    <meta property="og:type" content="website">
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Loja de Música">
+    <meta name="twitter:description" content="Loja de Música: Instrumentos, acessórios e tudo para músicos. Explore nossa loja para produtos exclusivos e de alta qualidade!">
+    <meta name="twitter:image" content="URL-da-imagem-de-capa-ou-produto.jpg">
+    <!-- Favicon -->
+    <link rel="icon" href="assets/music-icon.png" type="image/x-icon">
+    <!-- Link para o TailwindCSS -->
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+</head>
 
     <style>
         body,
