--- a/index.html
+++ b/index.html
@@ -21,10 +21,9 @@
     <meta name="twitter:description" content="Loja de Música: Instrumentos, acessórios e tudo para músicos. Explore nossa loja para produtos exclusivos e de alta qualidade!">
     <meta name="twitter:image" content="URL-da-imagem-de-capa-ou-produto.jpg">
     <!-- Favicon -->
-    <link rel="icon" href="assets/music-icon.png" type="image/x-icon">
+    <link rel="icon" href="assets/contrabaixo.jpg" type="image/x-icon">
     <!-- Link para o TailwindCSS -->
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.tailwindcss.com"></script>
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <!-- Fonts -->
