--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@
 
         <footer>
             <div class="footer-bottom">
-                <p>&copy; 2024 Sua Empresa. Todos os direitos reservados</p>
+                <p>&copy; 2025 Music store project</p>
             </div>
         </footer>
 
