--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
@@ -153,7 +153,7 @@
 
     <footer>
         <div class="footer-bottom">
-            <p>&copy; 2024 Sua Empresa. Todos os direitos reservados</p>
+            <p>&copy; 2025 Music store project</p>
         </div>
     </footer>
 
