Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bem-vindo ao meu projeto, loja de música</title>
+    <title>Welcome to my music store project.</title>
     <!-- Meta Tags para SEO -->
     <meta name="description" content="Loja de Música: Instrumentos, acessórios e tudo para músicos. Explore nossa loja para produtos exclusivos e de alta qualidade!">
     <meta name="keywords" content="música, loja de música, instrumentos musicais, acessórios musicais, loja online de música, produtos musicais">
